--- a/progressreport.html
+++ b/progressreport.html
@@ -13,6 +13,7 @@
                 <a class="navbarbutton" href="Casting.html">Casting</a> 
                 <a class="navbarbutton" href="progressreport.html">Progress Report</a> 
     </div>
+    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1617191314&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dana-gibbs-118771294" title="Dana Gibbs" target="_blank" style="color: #cccccc; text-decoration: none;">Dana Gibbs</a> · <a href="https://soundcloud.com/dana-gibbs-118771294/sets/meet-the-producers-sag-aftra" title="Meet the Producers | SAG-AFTRA: Through an Actor&#x27;s Eyes" target="_blank" style="color: #cccccc; text-decoration: none;">Meet the Producers | SAG-AFTRA: Through an Actor&#x27;s Eyes</a></div>
     <ul class="progresslist"> <li>2/11 - gathered preliminary research from news articles and contact info for potential interview subjects; worked on project proposal for presentation</li>
     
     <li>2/19 - worked on storyboard </li>
