--- a/Casting.html
+++ b/Casting.html
@@ -51,7 +51,7 @@
                 <img src="https://i.postimg.cc/5Xyv1mFR/2.png" width="300px" height="300px"/>
             </div>
             <div class="imgButton">
-                <a href="https://video.eko.com/"><button type="button" class="imgButton">Sean Mana</a>
+                <a href="https://video.eko.com/v/MZgkZD?autoplay=true"><button type="button" class="imgButton">Sean Mana</a>
             </div>
      </div>
         </td>
