--- a/progressreport.html
+++ b/progressreport.html
@@ -22,67 +22,72 @@
 
 <i>Transcript of Our Producer Audios</i> 
 
-Dana Gibbs: 
+<br>Dana Gibbs:</br> 
+</br>
 Hi, I’m Dana Gibbs, one of the producers of SAG-AFTRA: Through an Actor’s Eyes. Unlike my colleagues, I’m not a performer, but I’m a pop culture aficionado who blogs about the arts and entertainment at The Whisper Box and a co-host of the podcast Poppin’ Bottles & Culture with actress Meggy Hai Trang. I have so much love for the world of pop culture and the performers who bring vibrance to our world through their craft. Working on this project has given me a new perspective on the importance of actors’ unions and having representation in the media from people of all walks of life. I hope that the SAG-AFTRA union continues to make strides toward making a more inclusive media culture. 
+</br>
 
-Maleiya Lorenzo: 
+<br>Maleiya Lorenzo:</br>
+</br>
 Hi, I’m Maleiya Lorenzo and I’m one of the producers on SAG-AFTRA: Through an Actor’s Eyes. I fell in love with performing at the age of twelve when I played a mouse in a school production of Cinderella, and I was involved in many film and theater productions throughout highschool. This eventually led me to study film and television in college, as I saw a lack of representation for many diverse identities. This project has allowed me to hear the amazing stories of so many different actors, and their experiences with the union, and learn about the history, and how everything has changed over the years. And while I believe that representation for poc (people of color) creatives, along with those of diverse gender, sexual, and religious identities has improved, there is still a long way to go. 
 
-Sarah Morgan: 
+<br>
+Sarah Morgan: </br>
+
+<br>
 Hi, my name is Sarah Morgan and I’m one of the producers of SAG-AFTRA, through an Actor’s Eyes. I started acting when I was 9 years old. My first production was an adaptation of a musical that had originally been written and performed in a concentration camp during WWII, and it was through this production that I really grew to love acting, and saw the impact that acting, and theater in general, can have on the world. Fast forward to now, I’ve been acting since then. I’ve been pursuing acting in film and stage capacity and I studied theater in undergrad at Fordham university. I have taken part in numerous non-union and union productions, and I have really noticed some of the differences but also some of the similarities between union and non-union sets. And so that was one of the things that drew me to be interested in creating this project. Through speaking to the different actors that we worked with, I gained so much insight into, really how being a member of the union affects your acting career, and also just learned so much about the field of acting, and professional acting, and the union in history and throughout history. And, I think, something that’s really important to note is how the union has changed but the areas that it still needs to grow in. And, I think, working on this project really added some perspective to seeing, yes, it has grown so much and we’ve come so far, but, there’s still a bit of a ways to go. 
+</br>
 
-<h3>Starting the Project, Research, and Interviews</h3>
+<br>
+<h3>Starting the Project, Research, and Interviews</h3></br>
 
-When we began background research for the project, we noticed that many of the sources about the history and news regarding the union came only from SAG-AFTRA’s own website, leading to a very one sided picture of what occurs in the industry. This in turn made us want to dig deeper, and try and interview working actors that were everyday people, who could give us a new perspective on what it is like to join the union. 
+<br>When we began background research for the project, we noticed that many of the sources about the history and news regarding the union came only from SAG-AFTRA’s own website, leading to a very one sided picture of what occurs in the industry. This in turn made us want to dig deeper, and try and interview working actors that were everyday people, who could give us a new perspective on what it is like to join the union. 
+</br>
 
+<br>
 For more information we went to the New York Public Library for the Performing Arts to find archival materials and books to aid us in our research on the history and experience of actors within SAG-AFTRA. 
- 
-Photos of research materials at the New York Public Library for the Performing Arts. 
+</br>
 
 <div><img src="https://i.postimg.cc/yJY1bfRW/sag-research-1.jpg" class="progressimages"></img></div><div><img src="https://i.postimg.cc/QB48Gpgm/sag-research-2.jpg" class="progressimages"></img></div>
-<h3 class="citation">Taken by Dana Gibbs</h3>
+<h3 class="citation">Photos of research materials at the New York Public Library for the Performing Arts. Taken by Dana Gibbs</h3>
 
-We also watched the documentary Behind the Masks, which was released four years before the two unions merged. We noticed that there was very little diversity in the documentary interviews. Therefore, in looking into the actors that we wanted to interview, we wanted to highlight a diverse array of performers from different backgrounds, such as race, ethnicity, age, and gender. We conducted the interviews on both Fordham’s Rose Hill and Lincoln Center campuses, throughout the process of the project in April, as well as trying to gather materials such as videos and photos from the actors to enhance the visuals of the interviews. 
+<br>We also watched the documentary Behind the Masks, which was released four years before the two unions merged. We noticed that there was very little diversity in the documentary interviews. Therefore, in looking into the actors that we wanted to interview, we wanted to highlight a diverse array of performers from different backgrounds, such as race, ethnicity, age, and gender. We conducted the interviews on both Fordham’s Rose Hill and Lincoln Center campuses, throughout the process of the project in April, as well as trying to gather materials such as videos and photos from the actors to enhance the visuals of the interviews. 
+</br>
 
 <div><img src="https://i.postimg.cc/k2yMwrBk/anderson-filming.jpg" class="progressimages"></img></div><div><img src="https://i.postimg.cc/18S5pR5G/anderson-filming-2.jpg" class="progressimages"></img></div>
 <h3 class="citation">Interview with Joseph Dean Anderson at the Lincoln Center campus. Taken by Sarah Morgan </h3>
 
-<h3>Knight Lab Timeline</h3>
+<br><h3>Knight Lab Timeline</h3></br>
 
-We used Knightlab’s timeline feature to create our own history and events that have impacted SAG-AFTRA as an organization from its inception not the present in 2023. This was our first element that we worked on for the website and presented to our class for initial feedback. 
+<br>We used Knightlab’s timeline feature to create our own history and events that have impacted SAG-AFTRA as an organization from its inception not the present in 2023. This was our first element that we worked on for the website and presented to our class for initial feedback. 
+</br>
 
-For our class presentation we provided 34 dates from 1936 to 2022. The feedback we received was useful in developing this tool, by adding more interesting visual elements, detailed information such as videos and relevant archival images, and more detailed citations. 
+<br>For our class presentation we provided 34 dates from 1936 to 2022. The feedback we received was useful in developing this tool, by adding more interesting visual elements, detailed information such as videos and relevant archival images, and more detailed citations. 
+</br>
 
-To address this feedback, during our research process, we used a variety of books, original news articles, and current news outlets to synthesize the history we wanted to showcase. To enhance the experience of the users, we then looked to YouTube, as well as other image sites such as Wikimedia Commons and Flickr to find corresponding photos and videos to enhance the user experience, and visual look of the final product.  
-
+<br>To address this feedback, during our research process, we used a variety of books, original news articles, and current news outlets to synthesize the history we wanted to showcase. To enhance the experience of the users, we then looked to YouTube, as well as other image sites such as Wikimedia Commons and Flickr to find corresponding photos and videos to enhance the user experience, and visual look of the final product.  
+</br>
 <div><img src="https://i.postimg.cc/HcFTjdh7/timeline.png" class="progressimages"></img></div>
 
-<h3>Casting Page & Eko</h3> 
-
+<br><h3>Casting Page & Eko</h3> </br>
+<br>
 Our “Casting” page comprises all of our video interviews with the actors. We wanted to design it like a wall of headshots, allowing users to then click on the name of the actor and view the content, similar to the way casting directors would view an actor’s headshot and video reel. 
-
-We used Eko as a way to make the interviews with the actors more interactive. We broke the interviews up into different pathways that the viewers could follow based on the questions they answered. For example, when interviewing Amaya (pathway shown below), we chose to break her clips into two main paths: one about her passion for acting / experience as a child performer, and another path about her direct experience with the union. Structuring the videos this way not only helped to organize the user experience, but also allowed for us to showcase all responses from the interviews in a well thought out way. 
-
+</br>
+<br>We used Eko as a way to make the interviews with the actors more interactive. We broke the interviews up into different pathways that the viewers could follow based on the questions they answered. For example, when interviewing Amaya (pathway shown below), we chose to break her clips into two main paths: one about her passion for acting / experience as a child performer, and another path about her direct experience with the union. Structuring the videos this way not only helped to organize the user experience, but also allowed for us to showcase all responses from the interviews in a well thought out way. 
+</br>
 <div><img src="https://i.postimg.cc/zbyJJV0r/eko.png" class="progressimages"></img></div>
 
-<h3>Knightlab Juxtapose</h3>
+<br><h3>Knightlab Juxtapose</h3></br>
 
-We chose to use the Juxtapose feature on Knightlab to visually showcase the difference between the union in the past versus in the present. In doing this aspect of the project we wanted to highlight the increase in the diversity of performers targeting the years, along with showing a striking visual contrast from black and white to color photographs. These photos also help to emphasize the types of technology that have been used in productions over the years, and how they have changed as well. 
+<br>We chose to use the Juxtapose feature on Knightlab to visually showcase the difference between the union in the past versus in the present. In doing this aspect of the project we wanted to highlight the increase in the diversity of performers targeting the years, along with showing a striking visual contrast from black and white to color photographs. These photos also help to emphasize the types of technology that have been used in productions over the years, and how they have changed as well. 
+</br>
+<br><h3>What have we learned?</h3></br>
 
-<h3>What have we learned?<h3>
+<br>This project has given us a lot of insight into the film and television industry, and what the experience is like from a working actor’s perspective. While some of the producers did have this kind of experience as performers, we were not knowledgeable about the history and specific initiatives that the union has accomplished over the years. This has led us to become more aware of how the industry works from a viewer standpoint, and how the union can affect the experiences of actors, and the media we consume. We have also learned about some of the improvements that the union can make such as representation for those of transgender community, and the struggles that actors undergo to have steady work and healthcare. 
+</br>
+<br>What do we hope our project will do?</br>
 
-This project has given us a lot of insight into the film and television industry, and what the experience is like from a working actor’s perspective. While some of the producers did have this kind of experience as performers, we were not knowledgeable about the history and specific initiatives that the union has accomplished over the years. This has led us to become more aware of how the industry works from a viewer standpoint, and how the union can affect the experiences of actors, and the media we consume. We have also learned about some of the improvements that the union can make such as representation for those of transgender community, and the struggles that actors undergo to have steady work and healthcare. 
-
-What do we hope our project will do?
-
-We hope that our project can serve as an alternative resource to that of the SAG-AFTRA union website, and can be a resource for performers looking to join the union to decide if it is the right choice for them or not. We also want this to serve as an educational resource for the general public so they can learn more about the film and television industry, and how unions have impacted the media that they consume daily. In looking toward the future, we would like to continue to update this site to eventually cover an even wider array of identities to provide a fuller picture of the acting experience. 
-
-
-
-
-
-
-
-
+<br>We hope that our project can serve as an alternative resource to that of the SAG-AFTRA union website, and can be a resource for performers looking to join the union to decide if it is the right choice for them or not. We also want this to serve as an educational resource for the general public so they can learn more about the film and television industry, and how unions have impacted the media that they consume daily. In looking toward the future, we would like to continue to update this site to eventually cover an even wider array of identities to provide a fuller picture of the acting experience. 
+</br>
         </body>
         </html>
