--- a/progressreport.html
+++ b/progressreport.html
@@ -15,15 +15,15 @@
     </div>
     <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1617191314&color=%23171308&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dana-gibbs-118771294" title="Dana Gibbs" target="_blank" style="color: #cccccc; text-decoration: none;">Dana Gibbs</a> · <a href="https://soundcloud.com/dana-gibbs-118771294/sets/meet-the-producers-sag-aftra" title="Meet the Producers | SAG-AFTRA: Through an Actor&#x27;s Eyes" target="_blank" style="color: #cccccc; text-decoration: none;">Meet the Producers | SAG-AFTRA: Through an Actor&#x27;s Eyes</a></div>
     
- <h2>Report.</h2>
+ <h2>Report</h2>
       <h3>By: Dana Gibbs, Maleiya Lorenzo, & Sarah Morgan </h3>     
 
 <h3>Why choose SAG-AFTRA as a topic?</i></h3> 
 
-<i>Transcript of Our Producer Audios</i> 
+<h5> <br> <i>Transcript of Our Producer Audios</i> </br> </h5>
 
-<br>Dana Gibbs:</br> 
-</br>
+<h5><br>Dana Gibbs:</br> </h5>
+<br>
 Hi, I’m Dana Gibbs, one of the producers of SAG-AFTRA: Through an Actor’s Eyes. Unlike my colleagues, I’m not a performer, but I’m a pop culture aficionado who blogs about the arts and entertainment at The Whisper Box and a co-host of the podcast Poppin’ Bottles & Culture with actress Meggy Hai Trang. I have so much love for the world of pop culture and the performers who bring vibrance to our world through their craft. Working on this project has given me a new perspective on the importance of actors’ unions and having representation in the media from people of all walks of life. I hope that the SAG-AFTRA union continues to make strides toward making a more inclusive media culture. 
 </br>
 
