--- a/progressreport.html
+++ b/progressreport.html
@@ -27,12 +27,12 @@
 Hi, I’m Dana Gibbs, one of the producers of SAG-AFTRA: Through an Actor’s Eyes. Unlike my colleagues, I’m not a performer, but I’m a pop culture aficionado who blogs about the arts and entertainment at The Whisper Box and a co-host of the podcast Poppin’ Bottles & Culture with actress Meggy Hai Trang. I have so much love for the world of pop culture and the performers who bring vibrance to our world through their craft. Working on this project has given me a new perspective on the importance of actors’ unions and having representation in the media from people of all walks of life. I hope that the SAG-AFTRA union continues to make strides toward making a more inclusive media culture. 
 </br>
 
-<br>Maleiya Lorenzo:</br>
+<h5><br>Maleiya Lorenzo:</br></h5>
 </br>
 Hi, I’m Maleiya Lorenzo and I’m one of the producers on SAG-AFTRA: Through an Actor’s Eyes. I fell in love with performing at the age of twelve when I played a mouse in a school production of Cinderella, and I was involved in many film and theater productions throughout highschool. This eventually led me to study film and television in college, as I saw a lack of representation for many diverse identities. This project has allowed me to hear the amazing stories of so many different actors, and their experiences with the union, and learn about the history, and how everything has changed over the years. And while I believe that representation for poc (people of color) creatives, along with those of diverse gender, sexual, and religious identities has improved, there is still a long way to go. 
 
-<br>
-Sarah Morgan: </br>
+<h5><br>
+Sarah Morgan: </br></h5>
 
 <br>
 Hi, my name is Sarah Morgan and I’m one of the producers of SAG-AFTRA, through an Actor’s Eyes. I started acting when I was 9 years old. My first production was an adaptation of a musical that had originally been written and performed in a concentration camp during WWII, and it was through this production that I really grew to love acting, and saw the impact that acting, and theater in general, can have on the world. Fast forward to now, I’ve been acting since then. I’ve been pursuing acting in film and stage capacity and I studied theater in undergrad at Fordham university. I have taken part in numerous non-union and union productions, and I have really noticed some of the differences but also some of the similarities between union and non-union sets. And so that was one of the things that drew me to be interested in creating this project. Through speaking to the different actors that we worked with, I gained so much insight into, really how being a member of the union affects your acting career, and also just learned so much about the field of acting, and professional acting, and the union in history and throughout history. And, I think, something that’s really important to note is how the union has changed but the areas that it still needs to grow in. And, I think, working on this project really added some perspective to seeing, yes, it has grown so much and we’ve come so far, but, there’s still a bit of a ways to go. 
