--- a/progressreport.html
+++ b/progressreport.html
@@ -24,7 +24,7 @@
 
 <h5><br>Dana Gibbs:</br> </h5>
 <br>
-Hi, I’m Dana Gibbs, one of the producers of SAG-AFTRA: Through an Actor’s Eyes. Unlike my colleagues, I’m not a performer, but I’m a pop culture aficionado who blogs about the arts and entertainment at The Whisper Box and a co-host of the podcast Poppin’ Bottles & Culture with actress Meggy Hai Trang. I have so much love for the world of pop culture and the performers who bring vibrance to our world through their craft. Working on this project has given me a new perspective on the importance of actors’ unions and having representation in the media from people of all walks of life. I hope that the SAG-AFTRA union continues to make strides toward making a more inclusive media culture. 
+Hi, I’m Dana Gibbs, one of the producers of SAG-AFTRA: Through an Actor’s Eyes. Unlike my colleagues, I’m not a performer, but I’m a pop culture aficionado who blogs about the arts and entertainment at  <a href="https://thewhisperbox.com" title="The Whisper Box">The Whisper Box</a>and a co-host of the podcast  <a href="https://anchor.fm/poppin-bottles-culture" title="Poppin' Bottles & Culture">Poppin' Bottles & Culture</a> with actress Meggy Hai Trang. I have so much love for the world of pop culture and the performers who bring vibrance to our world through their craft. Working on this project has given me a new perspective on the importance of actors’ unions and having representation in the media from people of all walks of life. I hope that the SAG-AFTRA union continues to make strides toward making a more inclusive media culture. 
 </br>
 
 <h5><br>Maleiya Lorenzo:</br></h5>
