--- a/progressreport.html
+++ b/progressreport.html
@@ -48,13 +48,13 @@ Hi, my name is Sarah Morgan and I’m one of the producers of SAG-AFTRA, through
 For more information we went to the New York Public Library for the Performing Arts to find archival materials and books to aid us in our research on the history and experience of actors within SAG-AFTRA. 
 </br>
 
-<div><img src="https://i.postimg.cc/yJY1bfRW/sag-research-1.jpg" class="progressimages"></img></div><div><img src="https://i.postimg.cc/QB48Gpgm/sag-research-2.jpg" class="progressimages"></img></div>
+<div><img src="https://i.postimg.cc/yJY1bfRW/sag-research-1.jpg" class="progressimages"></img><img src="https://i.postimg.cc/QB48Gpgm/sag-research-2.jpg" class="progressimages"></img></div>
 <h3 class="citation">Photos of research materials at the New York Public Library for the Performing Arts. Taken by Dana Gibbs</h3>
 
 <br>We also watched the documentary Behind the Masks, which was released four years before the two unions merged. We noticed that there was very little diversity in the documentary interviews. Therefore, in looking into the actors that we wanted to interview, we wanted to highlight a diverse array of performers from different backgrounds, such as race, ethnicity, age, and gender. We conducted the interviews on both Fordham’s Rose Hill and Lincoln Center campuses, throughout the process of the project in April, as well as trying to gather materials such as videos and photos from the actors to enhance the visuals of the interviews. 
 </br>
 
-<div><img src="https://i.postimg.cc/k2yMwrBk/anderson-filming.jpg" class="progressimages"></img></div><div><img src="https://i.postimg.cc/18S5pR5G/anderson-filming-2.jpg" class="progressimages"></img></div>
+<div><img src="https://i.postimg.cc/k2yMwrBk/anderson-filming.jpg" class="progressimages"></img><img src="https://i.postimg.cc/18S5pR5G/anderson-filming-2.jpg" class="progressimages"></img></div>
 <h3 class="citation">Interview with Joseph Dean Anderson at the Lincoln Center campus. Taken by Sarah Morgan </h3>
 
 <br><h3>Knight Lab Timeline</h3></br>
