--- a/progressreport.html
+++ b/progressreport.html
@@ -15,9 +15,11 @@
     </div>
     <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1617191314&color=%23171308&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dana-gibbs-118771294" title="Dana Gibbs" target="_blank" style="color: #cccccc; text-decoration: none;">Dana Gibbs</a> · <a href="https://soundcloud.com/dana-gibbs-118771294/sets/meet-the-producers-sag-aftra" title="Meet the Producers | SAG-AFTRA: Through an Actor&#x27;s Eyes" target="_blank" style="color: #cccccc; text-decoration: none;">Meet the Producers | SAG-AFTRA: Through an Actor&#x27;s Eyes</a></div>
     
- <h2>Report</h2>
+ 
+   <h2>Report</h2>
       <h3>By: Dana Gibbs, Maleiya Lorenzo, & Sarah Morgan </h3>     
 
+<a href="https://docs.google.com/document/d/1oZNTy_tRdNnqZg5WvRGOMQPy-rzekfyt3acGHeGX1PE/edit?usp=sharing"><center></center></a>
 <h3>Why choose SAG-AFTRA as a topic?</i></h3> 
 
 <h5> <br> <i>Transcript of Our Producer Audios</i> </br> </h5>
