--- a/progressreport.html
+++ b/progressreport.html
@@ -19,7 +19,7 @@
    <h2>Report</h2>
       <h3>By: Dana Gibbs, Maleiya Lorenzo, & Sarah Morgan </h3>     
 
-<a href="https://docs.google.com/document/d/1oZNTy_tRdNnqZg5WvRGOMQPy-rzekfyt3acGHeGX1PE/edit?usp=sharing"><center></center></a>
+<a href="https://docs.google.com/document/d/1oZNTy_tRdNnqZg5WvRGOMQPy-rzekfyt3acGHeGX1PE/edit?usp=sharing"><center><title>= Report</title></center></a>
 <h3>Why choose SAG-AFTRA as a topic?</i></h3> 
 
 <h5> <br> <i>Transcript of Our Producer Audios</i> </br> </h5>
