--- a/Casting.html
+++ b/Casting.html
@@ -70,7 +70,7 @@
       </tr>
 </table>
  </div>  
-<h3 class="ekoinfo"> Eko is an interactive digital tool that allows users to create and control narratives with a step by step, “choose your own adventure” type program. In our Eko, we have collected testimonials and interviews with professional actors currently involved with the SAG-AFTRA union. Through Eko, you will be able to watch video interviews, and choose the path you want to take. Click through the videos of actor testimonials to learn more about the SAG-AFTRA union, and to gain insight into what life is like as a professional actor, and how the union impacts these actor’s careers.</h3>
+In our Eko, we have collected testimonials and interviews with professional actors currently involved with the SAG-AFTRA union. Click through the videos of actor testimonials to learn more about the SAG-AFTRA union, and to gain insight into what life is like as a professional actor, and how the union impacts these actor’s careers</h3>
 <h4></h4>
     _________
 
