--- a/Casting.html
+++ b/Casting.html
@@ -70,7 +70,7 @@
       </tr>
 </table>
  </div>  
-In our Eko, we have collected testimonials and interviews with professional actors currently involved with the SAG-AFTRA union. Click through the videos of actor testimonials to learn more about the SAG-AFTRA union, and to gain insight into what life is like as a professional actor, and how the union impacts these actor’s careers</h3>
+<h3>In our Eko, we have collected testimonials and interviews with professional actors currently involved with the SAG-AFTRA union. Click through the videos of actor testimonials to learn more about the SAG-AFTRA union, and to gain insight into what life is like as a professional actor, and how the union impacts these actor’s careers.</h3>
 <h4></h4>
     _________
 
