--- a/Casting.html
+++ b/Casting.html
@@ -16,6 +16,9 @@
 <h2></h2>
     <iframe width="860" height="615" src="https://www.youtube.com/embed/fPqly18arUQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <table class="center">
+<h3></h3>
+<h4 class="castinginfo">In our Eko, we have collected testimonials and interviews with professional actors currently involved with the SAG-AFTRA union. Click through the videos of actor testimonials to learn more about the SAG-AFTRA union, and to gain insight into what life is like as a professional actor, and how the union impacts these actor’s careers.</h4>
+<h5></h5>         
     <tr>
         <td>
   <div class="imgContainer">
@@ -63,8 +66,7 @@
       </tr>
 </table>
  </div>  
-<h3>In our Eko, we have collected testimonials and interviews with professional actors currently involved with the SAG-AFTRA union. Click through the videos of actor testimonials to learn more about the SAG-AFTRA union, and to gain insight into what life is like as a professional actor, and how the union impacts these actor’s careers.</h3>
-<h4></h4>
+<h5></h5> 
 
  </head>
      </body>    
